# auto-media-upload

./: .gitattributes  .gitignore  GUI_README.md  README.md  build_gui.bat  conf.py  database.db  generate_icon.py  main_gui.py  package-lock.json  requirements-gui.txt  sau_backend.py  start.bat
.github/workflows/: build.yml
gui/resources/: styles.qss
sau_frontend/: package.json
sau_frontend/backend-dist/_internal/flask-3.1.1.dist-info/: RECORD
sau_frontend/backend-dist/_internal/utils/: log.py
sau_frontend/src-tauri/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
